--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">Just Java</string>
+    <string name="app_name">Order Coffee</string>
     <string name="cream">Whipped Cream</string>
     <string name="chocolate">Chocolate</string>
     <string name="user_name">Name</string>
